chore: Squash me

--- a/meta/configs/ruby.yaml
+++ b/meta/configs/ruby.yaml
@@ -5,4 +5,4 @@
       force: true
 - link:
     ~/.gemrc: development/ruby/gemrc
-    ~/.rbenv/version: development/ruby/rbenv/version
+    ~/.ruby-version: development/ruby/ruby-version
