--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -5,5 +5,64 @@
       force: true
 - link:
     ~/.Brewfile: Brewfile
+
 - brewfile:
     file: Brewfile
+
+- shell++:
+  - description: Install Homebrew
+    condition: '! hash brew 2>/dev/null || test -h $(which brew)'
+  - stdout: true
+    stderr: true
+    command: |
+      # Ask for the administrator password upfront
+      sudo -v
+
+      # Keep-alive: update existing `sudo` time stamp until `.macos` has finished
+      while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
+
+      # Install XCode
+      mas install 497799835
+      sudo xcodebuild -license accept
+      xcode-select --install
+
+      /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+
+- tap:
+  - caskroom/versions
+  - caskroom/cask
+  - wooga/tools
+  - pivotal/tap
+  - nobitagamer/cask
+
+- brew:
+  - mas
+  - curl --with-openssl
+  - git-extras
+  - git-flow-avh
+  - gitversion
+  - fish
+  - tmux
+  - tmate
+
+- brew: [zsh, zsh-completions, zsh-syntax-highlighting]
+
+- cask:
+  - dotnet
+  - gitkraken
+  - iterm2
+  - kdiff3
+  - visual-studio
+  - visual-studio-code
+
+- shell++:
+  - description: Setting OSX defaults
+    condition: 'true'
+  - stdout: true
+    stdin: true
+    stderr: true
+    command: |
+      . ~/.dotfiles/apps/misc/macos/settings
+
+      # iTerm 2 Shell integration
+      curl -L https://iterm2.com/misc/install_shell_integration.sh | bash
