--- a/meta/configs/osx_defaults.yaml
+++ b/meta/configs/osx_defaults.yaml
@@ -1,6 +1,11 @@
-- shell:
-    - - ~/.dotfiles/app/misc/macos/settings
-      - Setting OSX defaults
+- shell++:
+  - description: Setting OSX defaults
+    condition: 'true'
+  - stdout: true
+    stdin: true
+    stderr: true
+    command: |
+      . ~/.dotfiles/apps/misc/macos/settings
 
 # # iTerm 2 Shell integration
 # curl -L https://iterm2.com/misc/install_shell_integration.sh | bash
