--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -29,3 +29,9 @@
 
       # Unity3D preinstall
       uvm install 2018.1.0f2 --android --ios
+
+      # Accept all licenses
+      yes | sdkmanager --licenses
+
+      # Android SDK build tools
+      sdkmanager "platform-tools" "build-tools;28.0.0" "tools" "extras;android;m2repository" "platforms;android-16" "sources;android-16" "platforms;android-27" "sources;android-27"
