--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -35,3 +35,10 @@
 
       # Android SDK build tools
       sdkmanager "platform-tools" "build-tools;28.0.0" "tools" "extras;android;m2repository" "platforms;android-16" "sources;android-16" "platforms;android-27" "sources;android-27"
+
+      # Install Ruby for fastlane
+      echo N | rbenv install 2.4.2
+
+      # Install bundle package manager
+      rbenv rehash
+      rbenv shell 2.4.2 && gem install bundle && rbenv rehash
