--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -26,9 +26,7 @@
 - tap:
   - caskroom/versions
   - caskroom/cask
-  - wooga/tools
-  - pivotal/tap
-  - nobitagamer/cask
+  # - pivotal/tap
 
 - brew:
   - mas
@@ -36,7 +34,7 @@
   - git-flow-avh
   - gitversion
   - exa
-  - fish
+  # - fish
   - tmux
   - tmate
   # - curl --with-openssl
@@ -74,16 +72,3 @@
 
       # Install OneDrive
       mas install 823766827
-
-
-- shell++:
-  - description: Setting OSX defaults
-    condition: 'true'
-  - stdout: true
-    stdin: true
-    stderr: true
-    command: |
-      . ~/.dotfiles/apps/misc/macos/settings
-
-      # iTerm 2 Shell integration
-      curl -L https://iterm2.com/misc/install_shell_integration.sh | bash
