--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -6,7 +6,7 @@
   - imagemagick
   - librsvg
   - rbenv
-  - wooga/tools/unity-version-manager
+  # - wooga/tools/unity-version-manager
 
 - cask:
   - java8
@@ -34,7 +34,7 @@
       yes | sdkmanager --licenses
 
       # Android SDK build tools
-      sdkmanager "platform-tools" "build-tools;28.0.0" "tools" "extras;android;m2repository" "platforms;android-16" "sources;android-16" "platforms;android-27" "sources;android-27"
+      sdkmanager "platform-tools" "build-tools;28.0.0" "tools" "extras;android;m2repository" "platforms;android-16" "sources;android-16" "platforms;android-27" "sources;android-27" "platforms;android-28" "sources;android-28"
 
       # Install Ruby for fastlane
       echo N | rbenv install 2.4.2
@@ -48,5 +48,5 @@
       # Unity3D preinstall
       cd ~/
       curl -O https://raw.githubusercontent.com/sttz/install-unity/master/install-unity.py && chmod +x install-unity.py
-      ~/install-unity.py --package Unity --package iOS --package Android --save 2018.1.0f2
+      ~/install-unity.py --package Unity --package iOS --package Android --save 2018.3.5f1
       # uvm install 2018.1.0f2 --android --ios
