fix: Require sudo before install anything

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -12,11 +12,11 @@
   - stdout: true
     stderr: true
     command: |
-      # Ask for the administrator password upfront
-      sudo -v
+      # # Ask for the administrator password upfront
+      # sudo -v
 
-      # Keep-alive: update existing `sudo` time stamp until `.macos` has finished
-      while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
+      # # Keep-alive: update existing `sudo` time stamp until `.macos` has finished
+      # while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
 
       /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 
@@ -71,11 +71,11 @@
   - stdout: true
     stderr: true
     command: |
-      # Ask for the administrator password upfront
-      sudo -v
+      # # Ask for the administrator password upfront
+      # sudo -v
 
-      # Keep-alive: update existing `sudo` time stamp until `.macos` has finished
-      while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
+      # # Keep-alive: update existing `sudo` time stamp until `.macos` has finished
+      # while true; do sudo -n true; sleep 60; kill -0 "$$" || exit; done 2>/dev/null &
 
       sudo xcodebuild -runFirstLaunch
       xcode-select --install
