--- a/meta/configs/settings.osx.yaml
+++ b/meta/configs/settings.osx.yaml
@@ -5,7 +5,9 @@
     stdin: true
     stderr: true
     command: |
-      . ~/.dotfiles/apps/misc/macos/settings
+      sudo cp -f ~/.dotfiles/apps/misc/macos/Library/LaunchAgents/com.luomat.loginhook.plist /Library/LaunchAgents/
 
       # iTerm 2 Shell integration
       curl -L https://iterm2.com/misc/install_shell_integration.sh | bash
+
+      . ~/.dotfiles/apps/misc/macos/settings
