--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -6,9 +6,6 @@
 - link:
     ~/.unity-init.sh: apps/Unity3D/unity-init.sh
 
-- tap:
-  - nobitagamer/cask
-
 - brew:
   - imagemagick
   - librsvg
@@ -18,7 +15,6 @@
 - cask:
   - java8
   - android-sdk
-  - nobitagamer/cask/android-ndk
   - fastlane
 
 - shell++:
@@ -31,7 +27,7 @@
 
       ~/.unity-init.sh
 
-      sudo ~/install-unity install -y -p Unity,VisualStudio,iOS,Android 2018.3.6f1
+      sudo ~/install-unity install -y -p Unity,VisualStudio,iOS,Android 2018.3.7f1
 
 - shell++:
   - description: Install cocoapods for build iOS
@@ -64,8 +60,10 @@
     condition: 'true'
   - stderr: true
     command: |
+      wget -qO- https://dl.google.com/android/repository/android-ndk-r16b-darwin-x86_64.zip | tar xvz - -C /usr/local/share/android-ndk/
+
       # Android SDK build tools
-      echo y | sdkmanager "platform-tools" "build-tools;28.0.0" "tools" "extras;android;m2repository"
+      echo y | sdkmanager "platform-tools" "build-tools;28.0.3" "tools" "extras;android;m2repository"
 
       echo y | sdkmanager "platforms;android-16" "sources;android-16"
       echo y | sdkmanager "platforms;android-27" "sources;android-27"
