--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -4,7 +4,7 @@
       relink: true
       force: true
 - link:
-    ~/.unity-init.sh: apps/Unity3D/unity-init.sh
+    ~/.Unity3D: apps/Unity3D
 
 - brew:
   - imagemagick
@@ -25,9 +25,9 @@
       # See https://stackoverflow.com/questions/9132826/stop-developer-tools-access-needs-to-take-control-of-another-process-for-debugg
       sudo /usr/sbin/DevToolsSecurity --enable
 
-      ~/.unity-init.sh
+      ~/.Unity3D/unity-init.sh
 
-      sudo ~/install-unity install -y -p Unity,VisualStudio,iOS,Android 2018.3.7f1
+      ~/.Unity3D/unity-install.sh 2018.3.7f1
 
 - shell++:
   - description: Install cocoapods for build iOS
@@ -60,7 +60,7 @@
     condition: 'true'
   - stderr: true
     command: |
-      wget -qO- https://dl.google.com/android/repository/android-ndk-r16b-darwin-x86_64.zip | tar xvz - -C /usr/local/share/android-ndk/
+      wget -qO- https://dl.google.com/android/repository/android-ndk-r16b-darwin-x86_64.zip | tar xz - -C /usr/local/share/android-ndk/
 
       # Android SDK build tools
       echo y | sdkmanager "platform-tools" "build-tools;28.0.3" "tools" "extras;android;m2repository"
