--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -27,7 +27,7 @@
 
       ~/.Unity3D/unity-init.sh
 
-      ~/.Unity3D/unity-install.sh 2018.3.7f1
+      ~/.Unity3D/unity-install.sh 2018.3
 
 - shell++:
   - description: Install cocoapods for build iOS
