feat: Init CentOS profile with yum plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "meta/dotbot-brew"]
 	path = meta/dotbot-brew
 	url = https://github.com/d12frosted/dotbot-brew.git
+[submodule "meta/dotbot-yum"]
+	path = meta/dotbot-yum
+	url = https://gitlab.com/flyingchipmunk/dotbot-yum.git
