--- a/meta/configs/ruby.yaml
+++ b/meta/configs/ruby.yaml
@@ -18,11 +18,13 @@
       if [ ! -d ~/.rbenv  ]; then
         git clone https://github.com/rbenv/rbenv.git ~/.rbenv
         git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
+        # curl -fsSL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-installer | bash
         git clone https://github.com/rkh/rbenv-update.git ~/.rbenv/plugins/rbenv-update
         git clone https://github.com/tpope/rbenv-communal-gems.git ~/.rbenv/plugins/rbenv-communal-gems
         git clone https://github.com/ianheggie/rbenv-binstubs.git ~/.rbenv/plugins/rbenv-binstubs
         git clone https://github.com/garnieretienne/rvm-download.git ~/.rbenv/plugins/rvm-download
       fi
+
       curl -fsSL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-doctor | bash
 
       if [ -r ~/.ruby-version ] && [ ! -d ~/.rbenv/versions/$(cat ~/.ruby-version) ]; then
