fix: Install ruby before brew linux

--- a/meta/configs/ruby.yaml
+++ b/meta/configs/ruby.yaml
@@ -14,7 +14,6 @@
   - stdout: true
     stderr: true
     command: |
-      export PATH="$HOME/.rbenv/bin:$PATH"
       if [ ! -d ~/.rbenv  ]; then
         git clone https://github.com/rbenv/rbenv.git ~/.rbenv
         git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
@@ -25,10 +24,13 @@
         git clone https://github.com/garnieretienne/rvm-download.git ~/.rbenv/plugins/rvm-download
       fi
 
+      export PATH="$HOME/.rbenv/bin:$PATH"
+      rbenv init
+
       curl -fsSL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-doctor | bash
 
       if [ -r ~/.ruby-version ] && [ ! -d ~/.rbenv/versions/$(cat ~/.ruby-version) ]; then
-        rbenv download $(cat ~/.ruby-version)
+        rbenv download $(cat ~/.ruby-version) || rbenv install $(cat ~/.ruby-version) # CentOS 7 does not have Ruby 2.4.6
       fi
 
       rbenv communize --all
