--- a/meta/configs/ruby.yaml
+++ b/meta/configs/ruby.yaml
@@ -14,6 +14,7 @@
   - stdout: true
     stderr: true
     command: |
+      export PATH="$HOME/.rbenv/bin:$PATH"
       if [ ! -d ~/.rbenv  ]; then
         git clone https://github.com/rbenv/rbenv.git ~/.rbenv
         git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
@@ -22,9 +23,10 @@
         git clone https://github.com/tpope/rbenv-communal-gems.git ~/.rbenv/plugins/rbenv-communal-gems
         git clone https://github.com/ianheggie/rbenv-binstubs.git ~/.rbenv/plugins/rbenv-binstubs
         git clone https://github.com/garnieretienne/rvm-download.git ~/.rbenv/plugins/rvm-download
+      else
+        rbenv update
       fi
 
-      export PATH="$HOME/.rbenv/bin:$PATH"
       rbenv init
 
       curl -fsSL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-doctor | bash
