--- a/meta/configs/binaries.linux.yaml
+++ b/meta/configs/binaries.linux.yaml
@@ -3,6 +3,9 @@
       create: true
       relink: true
       force: true
+      glob: true
+- link:
+    ~/bin/: bin/*
 - link:
     ~/.local/bin/exa: apps/misc/linux/exa-linux-x86_64-0.8.0
     ~/.local/bin/peco: apps/misc/linux/peco-0.5.1
