--- a/meta/configs/ruby.yaml
+++ b/meta/configs/ruby.yaml
@@ -31,6 +31,7 @@
 
       if [ -r ~/.ruby-version ] && [ ! -d ~/.rbenv/versions/$(cat ~/.ruby-version) ]; then
         rbenv download $(cat ~/.ruby-version) || rbenv install $(cat ~/.ruby-version) # CentOS 7 does not have Ruby 2.4.6
+        rbenv global $(cat ~/.ruby-version)
       fi
 
       rbenv communize --all
