--- a/meta/configs/yum.linux.yaml
+++ b/meta/configs/yum.linux.yaml
@@ -17,4 +17,4 @@
       zlib-devel bzip2 bzip2-devel readline-devel sqlite
       sqlite-devel openssl-devel xz xz-devel libffi-devel findutils
 
-- yum: [bash-completion, bash-completion-extras, hstr, jq, ccze]
+- yum: [bash-completion, bash-completion-extras, hstr, jq, ccze, ncdu]
