chore: Create Android NDK path

--- a/meta/configs/vsts.osx.yaml
+++ b/meta/configs/vsts.osx.yaml
@@ -18,8 +18,10 @@
     command: |
       mkdir ~/vso
       cd ~/vso
-      curl -O https://vstsagentpackage.azureedge.net/agent/2.150.3/vsts-agent-osx-x64-2.150.3.tar.gz
-      tar zxvf ./vsts-agent-osx-x64-2.150.3.tar.gz
+
+      AZ_AGENT_VERSION=2.155.1
+      curl -O https://vstsagentpackage.azureedge.net/agent/${AZ_AGENT_VERSION}/vsts-agent-osx-x64-${AZ_AGENT_VERSION}.tar.gz
+      tar zxvf ./vsts-agent-osx-x64-${AZ_AGENT_VERSION}.tar.gz
 
       # export VSTS_AGENT_INPUT_URL=https://<Account name>.visualstudio.com
       # export VSTS_AGENT_INPUT_TOKEN=<PAT>
