--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -68,15 +68,18 @@
     condition: 'true'
   - stderr: true
     command: |
+      mkdir -p /usr/local/share/android-ndk/
+
       # For Unity3D 2018.1.0f2
-      wget -qO- https://dl.google.com/android/repository/android-ndk-r13b-darwin-x86_64.zip | tar xz - -C /usr/local/share/android-ndk/
+      # wget -qO- https://dl.google.com/android/repository/android-ndk-r13b-darwin-x86_64.zip | tar xz - -C /usr/local/share/android-ndk/
 
       # For Unity3D 2018.3+
       wget -qO- https://dl.google.com/android/repository/android-ndk-r16b-darwin-x86_64.zip | tar xz - -C /usr/local/share/android-ndk/
 
       # Android SDK build tools
-      echo y | sdkmanager "platform-tools" "build-tools;28.0.3" "tools" "extras;android;m2repository"
+      echo y | sdkmanager "tools" "platform-tools" "build-tools;28.0.3" "tools"
 
+      echo y | sdkmanager "extras;android;m2repository"
       echo y | sdkmanager "platforms;android-16" "sources;android-16"
       echo y | sdkmanager "platforms;android-27" "sources;android-27"
       echo y | sdkmanager "platforms;android-28" "sources;android-28"
