chore: Remove kdiff3 from brew cask since it's not available anymore

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -41,7 +41,7 @@
   - dotnet
   - gitkraken
   - iterm2
-  - kdiff3
+  # - kdiff3 # not available any more
   # - visual-studio # Will install with Unity
   - visual-studio-code
 
