--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -27,9 +27,9 @@
 
       ~/.Unity3D/unity-init.sh
 
-      ~/.Unity3D/unity-install.sh 2018.1 9f2
+      # ~/.Unity3D/unity-install.sh 2018.1 9f2
       ~/.Unity3D/unity-install.sh 2018.4 3f1
-      ~/.Unity3D/unity-install.sh 2019.1 5f1
+      ~/.Unity3D/unity-install.sh 2019.1 10f1
 
 - shell++:
   - description: Install cocoapods for build iOS
