chore: Do NOT use brewfile

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -14,9 +14,10 @@
     command: |
       /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
 
-- brewfile:
-    # This accepts the same options as `brew bundle` command:
-    file: ~/.Brewfile
+# - brewfile:
+#     # This accepts the same options as `brew bundle` command:
+#     file: ~/.Brewfile
+#     no-upgrade: true
 
 - tap:
   - homebrew/cask-versions
