--- a/meta/configs/unity3d.osx.yaml
+++ b/meta/configs/unity3d.osx.yaml
@@ -27,10 +27,16 @@
 
       ~/.Unity3D/unity-init.sh
 
+      sudo ~/install-unity list
+
       # ~/.Unity3D/unity-install.sh 2018.1 9f2
       ~/.Unity3D/unity-install.sh 2018.4 3f1
-      ~/.Unity3D/unity-install.sh 2019.1 10f1
+
+      # ~/.Unity3D/unity-install.sh 2019.1 10f1
       ~/.Unity3D/unity-install.sh 2019.2 12f1
+
+      # Install Android dependencies to match Unity version
+      sudo ~/install-unity install -y -p Unity,iOS,Android 2019.3.14f1
 
 - shell++:
   - description: Install cocoapods for build iOS
@@ -56,6 +62,8 @@
       # Fix VSTS execute bash with --no-profile that will force rbenv use system Ruby.
       rbenv global $RUBY_VERSION
 
+      pod env
+      pod repo update
 - shell++:
   - description: Accept all licenses
     condition: 'true'
@@ -78,7 +86,15 @@
       # wget -qO- https://dl.google.com/android/repository/android-ndk-r13b-darwin-x86_64.zip | tar xz - -C /usr/local/share/android-ndk/
 
       # For Unity3D 2018.3+
-      wget -qO- https://dl.google.com/android/repository/android-ndk-r16b-darwin-x86_64.zip | tar xz - -C /usr/local/share/android-ndk/
+      # wget -qO- https://dl.google.com/android/repository/android-ndk-r16b-darwin-x86_64.zip | tar xz - -C /usr/local/share/android-ndk/
+
+      # macOS Catalina https://developer.android.com/studio/projects/install-ndk#specific-version
+      echo "Because the Catalina stronger verification, IL2CPP build will fail if NDK version is NOT install via the SDK Installer in Android Studio."
+      # See https://forum.unity.com/threads/il2cppcore-dll-did-not-run-properly.738350/#post-5392932
+      echo y | sdkmanager --install "ndk;16.1.4479499"
+
+      # Unity 2019.3 (use built-in dependencies)
+      # echo y | sdkmanager --install "ndk;19.2.5345600"
 
       # Android SDK build tools
       echo y | sdkmanager "tools" "platform-tools" "build-tools;28.0.3"
@@ -89,3 +105,5 @@
       # echo y | sdkmanager "platforms;android-27" "sources;android-27"
       # echo y | sdkmanager "platforms;android-28" "sources;android-28"
       echo y | sdkmanager "platforms;android-29" "sources;android-29" # platforms;android-29 is required for build AndroidX by Unity
+
+
