fix: Force use Python2 to avoid `SyntaxWarning for 'is' with literals` on Python 3.8.5 from MacOS Catalina

--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -6,14 +6,15 @@
 - link:
     ~/.Brewfile: Brewfile
 
-- shell++:
-  - description: Install Xcode command line tools
-    condition: 'true'
-  - stdout: true
-    stderr: true
-    command: |
-      # Install Xcode command line tools
-      xcode-select --install
+# Installed outside of dotbot because it's required by git.
+# - shell++:
+#   - description: Install Xcode command line tools
+#     condition: 'true'
+#   - stdout: true
+#     stderr: true
+#     command: |
+#       # Install Xcode command line tools
+#       xcode-select --install
 
 - shell++:
   - description: Install Homebrew
