--- a/meta/configs/ruby.yaml
+++ b/meta/configs/ruby.yaml
@@ -35,4 +35,4 @@
       fi
 
       rbenv communize --all
-      curl -fsSL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-doctor | bash
+      curl -fsSL https://raw.githubusercontent.com/rbenv/rbenv-installer/main/bin/rbenv-doctor | bash
