--- a/meta/configs/yum.linux.yaml
+++ b/meta/configs/yum.linux.yaml
@@ -11,6 +11,34 @@
 #       options: '-q -y --disablerepo=* --enablerepo=mainline --enablerepo=mainline-extra'
 #       group: True
 
+- shell++:
+  - description: Remove old default git version on CentOS 7
+    condition: '[[ $(git --version) == "git version 1.8.3.1" ]] || false'
+  - stderr: true
+    command: |
+      sudo yum -y remove git
+      sudo yum -y remove git-*.
+      sudo yum -y install https://packages.endpointdev.com/rhel/7/os/x86_64/endpoint-repo.x86_64.rpm
+
+- shell++:
+  - description: Update latest Git that required by linuxbrew
+    condition: 'true'
+  - stderr: true
+    command: |
+      sudo yum install git
+      git --version
+
+- shell++:
+  - description: Update latest Curl that required by linuxbrew
+    condition: 'true'
+  - stderr: true
+    command: |
+      sudo rpm -Uvh http://www.city-fan.org/ftp/contrib/yum-repo/rhel7/x86_64/city-fan.org-release-2-2.rhel7.noarch.rpm
+      sudo yum install -y yum-utils
+      sudo yum-config-manager --disable city-fan.org
+      sudo yum --enablerepo=city-fan.org -y install libcurl libcurl-devel
+      curl --version
+
 - yum:
     - >-
       epel-release git gcc
